@@ -8,18 +8,28 @@ import com.epam.aidial.evaluation.data.db.model.pagination.Page;
 import com.epam.aidial.evaluation.data.db.model.pagination.PageRequest;
 import com.epam.aidial.evaluation.data.db.repository.DatasetRepository;
 import com.epam.aidial.evaluation.data.db.repository.TestCaseRepository;
+import com.epam.aidial.evaluation.runner.client.dialcore.DialCoreClientException;
 import com.epam.aidial.evaluation.runner.client.dialcore.DialFileClient;
-import com.epam.aidial.evaluation.runner.client.dialcore.DialFileRefResolver;
 import com.epam.aidial.evaluation.runner.config.logging.LogExecution;
 import com.epam.aidial.evaluation.runner.dto.FieldDefinitionDto;
 import com.epam.aidial.evaluation.runner.dto.SchemaFieldType;
+import com.epam.aidial.evaluation.service.domain.csv.TestCaseExportRowProjector;
+import com.epam.aidial.evaluation.service.domain.csv.TestCaseExportRowProjector.ProjectedRow;
 import com.epam.aidial.evaluation.service.domain.exception.EntityNotFoundException;
 import com.epam.aidial.evaluation.service.domain.filter.FilterParser;
+import com.epam.aidial.evaluation.service.domain.zip.ZipExportFileCollector;
+import com.epam.aidial.evaluation.service.domain.zip.ZipExportFileCollector.FileClassification;
+import com.epam.aidial.evaluation.service.domain.zip.ZipManifest;
+import com.epam.aidial.evaluation.service.domain.zip.ZipManifestSerializer;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
+import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -31,14 +41,17 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVPrinter;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 import tools.jackson.core.JacksonException;
-import tools.jackson.core.type.TypeReference;
 import tools.jackson.databind.ObjectMapper;
 
 /**
- * Exports test cases as a ZIP archive containing test-cases.csv and a files/ directory
- * when FILE-type fields are present and materializeFiles is true.
+ * Exports test cases as a ZIP archive (test-cases.csv, manifest.json and a files/ directory) when the
+ * dataset's schema has FILE-type fields and materialization is requested. Builds the whole archive on disk
+ * before returning a handle to it (design D8), so a download failure never sends a partial ZIP with a 200
+ * status.
  */
 @Slf4j
 @Service
@@ -46,18 +59,20 @@ import tools.jackson.databind.ObjectMapper;
 @RequiredArgsConstructor
 public class ZipExportService {
 
-    private static final TypeReference<Map<String, Object>> MAP_TYPE = new TypeReference<>() {};
+    private static final String TEST_CASES_CSV_ENTRY = "test-cases.csv";
+    private static final String MANIFEST_JSON_ENTRY = "manifest.json";
 
     private final DatasetRepository datasetRepository;
     private final DatasetSchemaProvider datasetSchemaProvider;
     private final TestCaseRepository testCaseRepository;
     private final DialFileClient dialFileClient;
-    private final DialFileRefResolver dialFileRefResolver;
-    private final FileRefValidator fileRefValidator;
+    private final ZipExportFileCollector zipExportFileCollector;
+    private final ZipManifestSerializer zipManifestSerializer;
     private final FilterParser filterParser;
     private final ObjectMapper objectMapper;
     private final CsvExportProperties csvExportProperties;
     private final PaginationProperties paginationProperties;
+    private final TestCaseExportRowProjector rowProjector;
 
     /**
      * Returns true if the dataset's schema contains at least one FILE-type field.
@@ -71,11 +86,14 @@ public class ZipExportService {
     }
 
     /**
-     * Exports test cases as ZIP with CSV + files. Streams to output without full in-memory buffering.
-     * FILE field values (DIAL file references) are replaced with relative paths in the CSV,
-     * and actual file bytes are downloaded from DIAL and embedded in the ZIP.
+     * Builds a complete ZIP export for the dataset in a temp file and returns a handle to it. Only after
+     * this method returns successfully has every referenced EF-owned file been downloaded and every row
+     * written, so a caller can set response headers only on success (see design D8).
+     *
+     * @throws EntityNotFoundException if the dataset does not exist
+     * @throws DialCoreClientException naming the reference, if any EF-owned file cannot be downloaded
      */
-    public void exportZip(UUID datasetId, List<String> filter, char delimiter, OutputStream out) throws IOException {
+    public ZipExportHandle buildZip(UUID datasetId, List<String> filter, char delimiter) {
         if (!datasetRepository.existsById(datasetId)) {
             throw new EntityNotFoundException("Dataset not found: " + datasetId);
         }
@@ -85,122 +103,176 @@ public class ZipExportService {
                 .map(FieldDefinitionDto::getName)
                 .filter(name -> name != null && !name.isBlank())
                 .toList();
-
         Set<String> fileFieldNames = fields.stream()
                 .filter(f -> f != null && f.getType() == SchemaFieldType.FILE)
                 .map(FieldDefinitionDto::getName)
                 .collect(Collectors.toSet());
 
         List<FilterCondition> filters = filterParser.parse(filter != null ? filter : List.of());
-        int pageSize = Math.min(Math.max(1, csvExportProperties.getPageSize()), paginationProperties.getMaxSize());
+        int pageSize = Math.clamp(csvExportProperties.getPageSize(), 1, paginationProperties.getMaxSize());
 
-        try (ZipOutputStream zos = new ZipOutputStream(out, StandardCharsets.UTF_8)) {
-            List<CsvRow> allRows = collectRows(datasetId, dataColumnNames, fileFieldNames, pageSize, filters);
+        Path csvPath = createTempFile("zip-export-csv-", ".tmp");
+        Path zipPath;
+        try {
+            zipPath = createTempFile("zip-export-", ".zip");
+        } catch (RuntimeException e) {
+            deleteQuietly(csvPath);
+            throw e;
+        }
 
-            // Write CSV entry
-            zos.putNextEntry(new ZipEntry("test-cases.csv"));
-            writeCsvToZip(zos, dataColumnNames, delimiter, allRows);
-            zos.closeEntry();
+        try {
+            Map<String, String> assignedArchivePaths = new LinkedHashMap<>();
+            List<ZipManifest.FileEntry> manifestFiles = new ArrayList<>();
 
-            // Write file entries
-            for (CsvRow row : allRows) {
-                if (row.fileEntries == null) {
-                    continue;
-                }
-                for (FileEntry entry : row.fileEntries) {
-                    try {
-                        String zipPath = "files/" + row.rowIndex + "/" + entry.fieldName + "/" + entry.filename;
-                        zos.putNextEntry(new ZipEntry(zipPath));
-                        String realPath = dialFileRefResolver.resolveToRealPath(entry.dialRef);
-                        dialFileClient.downloadTo(realPath, zos);
-                        zos.closeEntry();
-                    } catch (Exception e) {
-                        log.warn(
-                                "Failed to download file for ZIP export: ref={}, error={}",
-                                entry.dialRef,
-                                e.getMessage(),
-                                e);
-                    }
-                }
+            try (OutputStream zipOut = Files.newOutputStream(zipPath);
+                    ZipOutputStream zos = new ZipOutputStream(zipOut, StandardCharsets.UTF_8)) {
+                writeCsvAndFileEntries(
+                        zos,
+                        csvPath,
+                        datasetId,
+                        dataColumnNames,
+                        fileFieldNames,
+                        delimiter,
+                        pageSize,
+                        filters,
+                        assignedArchivePaths,
+                        manifestFiles);
+
+                ZipManifest manifest = new ZipManifest(ZipManifest.CURRENT_FORMAT_VERSION, fields, manifestFiles);
+                zos.putNextEntry(new ZipEntry(MANIFEST_JSON_ENTRY));
+                zos.write(zipManifestSerializer.write(manifest));
+                zos.closeEntry();
             }
+
+            Path builtZipPath = zipPath;
+            zipPath = null; // ownership passes to the handle
+            return new TempFileZipExportHandle(builtZipPath);
+        } catch (IOException e) {
+            throw new UncheckedIOException("Failed to build ZIP export for dataset " + datasetId, e);
+        } finally {
+            deleteQuietly(csvPath);
+            deleteQuietly(zipPath);
         }
     }
 
-    private List<CsvRow> collectRows(
+    private void writeCsvAndFileEntries(
+            ZipOutputStream zos,
+            Path csvPath,
             UUID datasetId,
             List<String> dataColumnNames,
             Set<String> fileFieldNames,
+            char delimiter,
             int pageSize,
-            List<FilterCondition> filters) {
-        List<CsvRow> rows = new ArrayList<>();
-        int page = 0;
-        int rowIndex = 1;
-
-        while (true) {
-            PageRequest pageRequest = PageRequest.of(page, pageSize);
-            Page<TestCase> pageResult = testCaseRepository.findAllByDatasetId(datasetId, pageRequest, filters, false);
-            List<TestCase> cases = pageResult.getContent();
-            if (cases.isEmpty()) {
-                break;
-            }
-
-            for (TestCase tc : cases) {
-                Map<String, Object> data = parseJsonToMap(tc.getData());
-                List<Object> values = new ArrayList<>();
-                values.add(tc.getTestCaseName() != null ? tc.getTestCaseName() : "");
-
-                List<FileEntry> fileEntries = new ArrayList<>();
-
-                for (String name : dataColumnNames) {
-                    Object value = data.get(name);
-                    if (fileFieldNames.contains(name) && value != null) {
-                        String dialRef = value.toString();
-                        if (!dialRef.isBlank()
-                                && fileRefValidator.validateFormat(dialRef).isEmpty()) {
-                            String filename = dialFileRefResolver.extractFilename(dialRef);
-                            String relativePath = "files/" + rowIndex + "/" + name + "/" + filename;
-                            values.add(relativePath);
-                            fileEntries.add(new FileEntry(name, dialRef, filename));
-                        } else {
-                            values.add(cellValue(value));
-                        }
-                    } else {
-                        values.add(cellValue(value));
-                    }
-                }
-
-                rows.add(new CsvRow(rowIndex, values, fileEntries.isEmpty() ? null : fileEntries));
-                rowIndex++;
-            }
-
-            if (cases.size() < pageSize) {
-                break;
-            }
-            page++;
-        }
-        return rows;
-    }
-
-    private void writeCsvToZip(ZipOutputStream zos, List<String> dataColumnNames, char delimiter, List<CsvRow> rows)
+            List<FilterCondition> filters,
+            Map<String, String> assignedArchivePaths,
+            List<ZipManifest.FileEntry> manifestFiles)
             throws IOException {
-        List<String> header = new ArrayList<>();
-        header.add("testCaseName");
-        header.addAll(dataColumnNames);
-
         CSVFormat format = CSVFormat.DEFAULT
                 .builder()
                 .setDelimiter(delimiter)
                 .setRecordSeparator("\n")
                 .get();
 
-        OutputStreamWriter writer = new OutputStreamWriter(zos, StandardCharsets.UTF_8);
-        CSVPrinter printer = new CSVPrinter(writer, format);
-        printer.printRecord(header);
+        try (OutputStreamWriter writer =
+                        new OutputStreamWriter(Files.newOutputStream(csvPath), StandardCharsets.UTF_8);
+                CSVPrinter printer = new CSVPrinter(writer, format)) {
+            List<String> header = new ArrayList<>();
+            header.add("testCaseName");
+            header.add("turnIndex");
+            header.addAll(dataColumnNames);
+            printer.printRecord(header);
 
-        for (CsvRow row : rows) {
-            printer.printRecord(row.values);
+            int page = 0;
+            while (true) {
+                PageRequest pageRequest = PageRequest.of(page, pageSize);
+                Page<TestCase> pageResult =
+                        testCaseRepository.findAllByDatasetId(datasetId, pageRequest, filters, false);
+                List<TestCase> cases = pageResult.getContent();
+                if (cases.isEmpty()) {
+                    break;
+                }
+                for (TestCase tc : cases) {
+                    String name = tc.getTestCaseName() != null ? tc.getTestCaseName() : "";
+                    for (ProjectedRow row : rowProjector.project(tc)) {
+                        printer.printRecord(buildRow(
+                                name,
+                                row.turnIndex(),
+                                row.data(),
+                                dataColumnNames,
+                                fileFieldNames,
+                                zos,
+                                assignedArchivePaths,
+                                manifestFiles));
+                    }
+                }
+                if (cases.size() < pageSize) {
+                    break;
+                }
+                page++;
+            }
         }
-        printer.flush();
+
+        zos.putNextEntry(new ZipEntry(TEST_CASES_CSV_ENTRY));
+        Files.copy(csvPath, zos);
+        zos.closeEntry();
+    }
+
+    private List<Object> buildRow(
+            String testCaseName,
+            String turnIndex,
+            Map<String, Object> data,
+            List<String> dataColumnNames,
+            Set<String> fileFieldNames,
+            ZipOutputStream zos,
+            Map<String, String> assignedArchivePaths,
+            List<ZipManifest.FileEntry> manifestFiles)
+            throws IOException {
+        List<Object> row = new ArrayList<>();
+        row.add(testCaseName);
+        row.add(turnIndex);
+        for (String name : dataColumnNames) {
+            Object value = data.get(name);
+            if (fileFieldNames.contains(name) && value != null) {
+                row.add(resolveFileCell(value.toString(), zos, assignedArchivePaths, manifestFiles));
+            } else {
+                row.add(cellValue(value));
+            }
+        }
+        return row;
+    }
+
+    private String resolveFileCell(
+            String ref,
+            ZipOutputStream zos,
+            Map<String, String> assignedArchivePaths,
+            List<ZipManifest.FileEntry> manifestFiles)
+            throws IOException {
+        FileClassification classification = zipExportFileCollector.classify(ref, assignedArchivePaths);
+        if (classification instanceof FileClassification.Verbatim verbatim) {
+            return verbatim.value() != null ? verbatim.value() : "";
+        }
+
+        FileClassification.EfOwned efOwned = (FileClassification.EfOwned) classification;
+        if (efOwned.firstSeen()) {
+            zos.putNextEntry(new ZipEntry(efOwned.archivePath()));
+            try {
+                dialFileClient.downloadTo(efOwned.realPath(), zos);
+            } catch (DialCoreClientException e) {
+                log.warn("Failed to download file for ZIP export, aborting: ref={}, error={}", ref, e.getMessage(), e);
+                throw new DialCoreClientException(
+                        e.getStatusCode(), "Failed to download file for ZIP export: " + ref, e);
+            } catch (RestClientException e) {
+                // Transport-level failure (e.g. ResourceAccessException) that DialFileClient does not itself
+                // map to a DialCoreClientException; still must fail the export naming the ref, not surface
+                // as a generic 500 with no ref.
+                log.warn("Failed to download file for ZIP export, aborting: ref={}, error={}", ref, e.getMessage(), e);
+                throw new DialCoreClientException(
+                        HttpStatus.BAD_GATEWAY, "Failed to download file for ZIP export: " + ref, e);
+            }
+            zos.closeEntry();
+            manifestFiles.add(new ZipManifest.FileEntry(efOwned.archivePath(), ref));
+        }
+        return efOwned.archivePath();
     }
 
     private String cellValue(Object value) {
@@ -217,18 +289,56 @@ public class ZipExportService {
         return value.toString();
     }
 
-    private Map<String, Object> parseJsonToMap(String json) {
-        if (json == null || json.isBlank()) {
-            return Map.of();
-        }
+    private static Path createTempFile(String prefix, String suffix) {
         try {
-            return objectMapper.readValue(json, MAP_TYPE);
-        } catch (Exception e) {
-            return Map.of();
+            return Files.createTempFile(prefix, suffix);
+        } catch (IOException e) {
+            throw new UncheckedIOException("Failed to create temp file for ZIP export", e);
         }
     }
 
-    private record CsvRow(int rowIndex, List<Object> values, List<FileEntry> fileEntries) {}
+    private void deleteQuietly(Path path) {
+        if (path == null) {
+            return;
+        }
+        try {
+            Files.deleteIfExists(path);
+        } catch (IOException e) {
+            log.warn("Failed to delete temp file {}: {}", path, e.getMessage(), e);
+        }
+    }
 
-    private record FileEntry(String fieldName, String dialRef, String filename) {}
+    /**
+     * A handle to a finished, on-disk ZIP export. {@link #close()} deletes the temp file, so callers stream
+     * it through try-with-resources.
+     */
+    public interface ZipExportHandle extends AutoCloseable {
+
+        /**
+         * Copies the built ZIP's bytes to {@code out}.
+         */
+        void transferTo(OutputStream out) throws IOException;
+
+        @Override
+        void close();
+    }
+
+    private final class TempFileZipExportHandle implements ZipExportHandle {
+
+        private final Path zipPath;
+
+        private TempFileZipExportHandle(Path zipPath) {
+            this.zipPath = zipPath;
+        }
+
+        @Override
+        public void transferTo(OutputStream out) throws IOException {
+            Files.copy(zipPath, out);
+        }
+
+        @Override
+        public void close() {
+            deleteQuietly(zipPath);
+        }
+    }
 }
